Fix contrast for bootstrap's input-group-text

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -111,6 +111,24 @@ textarea {
   padding: 0;
 }
 
+.input-group-text {
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-align: center;
+  align-items: center;
+  padding: .375rem .75rem;
+  margin-bottom: 0;
+  font-size: 1rem;
+  font-weight: 400;
+  line-height: 1.5;
+  color: #fff;
+  text-align: center;
+  white-space: nowrap;
+  background-color: #5e6162;
+  border: 1px solid #5e6162;
+  border-radius: .25rem;
+}
+
 .dropdown-item {
   color: #ffffff;
 }
